final markdown added

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "<Axes: title={'center': 'Rating over time (1999-2004)'}>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -44,7 +44,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Import libraries\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -56,6 +55,13 @@
     "\n",
     "# Plot\n",
     "ratings_df.plot(color = \"tomato\", title= \"Rating over time (1999-2004)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Between 1999 and 2000 there were noted increase about : {ratings_df[2000]}"
    ]
   },
   {
@@ -91,6 +97,15 @@
    ],
    "source": [
     "ratings_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More informations you can find under links:\n",
+    "- <i>PL https://pl.wikipedia.org/wiki/Rodzina_zastępcza_(serial_telewizyjny)\n",
+    "- EN https://en.wikipedia.org/wiki/Rodzina_zastępcza</i>"
    ]
   }
  ],
